--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,12 +2,62 @@ pipeline {
 
     agent any
 
+    parameters{
+
+        choice(name: 'action', choices: 'create\nupdate\destroyekscluster', description: 'Create/Update or Destroy the EKS Cluster')
+        string(name: 'cluster', defaultValue: 'eks-cluster', description: 'Eks Cluster Name')
+        string(name: 'region', defaultValue: 'us-east-1', description: 'Eks cluster region')
+    }
+    environment{
+
+        ACCESS_KEY = credentials('aws_access_key_id')
+        SECRET_KEY = credentials('aws_secret_access_key')
+    }
     stages{
 
         stage('git checkout'){
 
             steps{
                 git branch: 'main', url: 'https://github.com/sumit0012/eks-cluster.git'
+            }
+        }
+
+        stage('eks connect'){
+
+            steps{
+                sh """
+                
+                aws configure set aws_access_key_id "ACCESS_KEY"
+                aws configure set aws_secret_access_key "SECRET_KEY"
+                aws configure set region ""
+                aws eks --region ${params.region} update-kubeconfig --name ${params.cluster}
+                
+                """;
+            }
+        }
+
+        stage('eks deployment'){
+            when ( expression ( params.action == 'create'))
+            steps{
+                
+                scripts{
+                    def apply = false
+                    try{
+                        input message: 'Please Confirm the apply to initiate the deployments', ok: 'Ready to apply the config'
+                        apply = true
+                    }
+                    catch(err){
+                        apply= false
+                        CurrentBuild.result= 'Unstable'
+                    }
+                    if(apply){
+
+                        sh """
+                        kubectl apply -f
+                        """;
+                    }
+
+                }
             }
         }
     }
