--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
 
     parameters{
 
-        choice(name: 'action', choices: 'create\nupdate\destroyekscluster', description: 'Create/Update or Destroy the EKS Cluster')
+        choice(name: 'action', choices: 'create\nupdate\\ndestroyekscluster', description: 'Create/Update or Destroy the EKS Cluster')
         string(name: 'cluster', defaultValue: 'eks-cluster', description: 'Eks Cluster Name')
         string(name: 'region', defaultValue: 'us-east-1', description: 'Eks cluster region')
     }
