--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,6 +13,7 @@ pipeline {
         ACCESS_KEY = credentials('aws_access_key_id')
         SECRET_KEY = credentials('aws_secret_access_key')
     }
+
     stages{
 
         stage('git checkout'){
@@ -27,8 +28,8 @@ pipeline {
             steps{
                 sh """
                 
-                aws configure set aws_access_key_id "ACCESS_KEY"
-                aws configure set aws_secret_access_key "SECRET_KEY"
+                aws configure set aws_access_key_id "$ACCESS_KEY"
+                aws configure set aws_secret_access_key "$SECRET_KEY"
                 aws configure set region ""
                 aws eks --region ${params.region} update-kubeconfig --name ${params.cluster}
                 
@@ -36,29 +37,6 @@ pipeline {
             }
         }
 
-        stage('eks deployment'){
-            when ( expression ( params.action == 'create'))
-            steps{
-                
-                scripts{
-                    def apply = false
-                    try{
-                        input message: 'Please Confirm the apply to initiate the deployments', ok: 'Ready to apply the config'
-                        apply = true
-                    }
-                    catch(err){
-                        apply= false
-                        CurrentBuild.result= 'Unstable'
-                    }
-                    if(apply){
 
-                        sh """
-                        kubectl apply -f
-                        """;
-                    }
-
-                }
-            }
-        }
     }
 }
