--- a/JenkinsFile
+++ b/JenkinsFile
@@ -37,6 +37,30 @@ pipeline {
             }
         }
 
+        stage('eks deployment'){
+            when ( expression ( params.action == 'create'))
+            steps{
+            
+                scripts{
+                    def apply = false
+                    try{
+                        input message: 'Please Confirm the apply to initiate the deployments', ok: 'Ready to apply the config'
+                        apply = true
+                    }
+                    catch(err){
+                        apply= false
+                        CurrentBuild.result= 'Unstable'
+                    }
+                    if(apply){
+
+                        sh '''
+                        kubectl apply -f
+                        ''' ;
+                    }
+
+                }
+            }
+        }
 
     }
 }
